# Data_DE_Project

./: README.md  dbt_project.yml  networkrail_movements.py  operateing_company.csv  pyproject.toml  stg_networkrail__movements.sql  stg_networkrail__operating_companies.sql  transform.py
csv_file/: operating_companies.csv
networkrail_consumer/: pyproject.toml
stg_networkrail/: stg_networkrail__movements.sql
